--- a/project-demo/package.json
+++ b/project-demo/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bootstrap-icons": "^1.5.0",
     "credential-handler-polyfill": "^2.2.1",
+    "firebase": "^9.1.0",
     "materialize-css": "^1.0.0-rc.2",
     "onedrive-api": "^1.0.1",
     "v-clipboard": "^2.2.3",
